# paper-verify

./: .gitignore  AGENTS.md  LICENSE  MANIFEST.in  README.ko.md  README.md  feature_list.json  pyproject.toml
.claude-plugin/: marketplace.json
.github/workflows/: ci.yml  release.yml
docs/: RELEASING.md  harness-strategy.md
docs/harness/: 2026-06-11_webchat-cli-accessibility-design.md  2026-06-11_webchat-cli-accessibility-plan.md
docs/providers/: claude-code.md  codex.md  cursor.md  gemini.md
docs/webchat/: webchat-prompt.ko.md  webchat-prompt.md
examples/: evidence-sample.json  sample.md
integrations/plugins/paper-verify/: .mcp.json
integrations/skills/paper-verify-webchat/: SKILL.md
paperverify/: __init__.py  __main__.py  cli.py  extract.py  fetch.py  judge.py  mcp_server.py  models.py  offline.py  report.py  score.py  sources.py
paperverify/harness/: __init__.py  base.py
tests/: test_author_year.py  test_blog_sources.py  test_cli_coverage.py  test_consensus_display.py  test_cross_check_substantive.py  test_extract.py  test_extract_dedup.py  test_fetch_coverage.py  test_fetch_metadata.py  test_fetch_ssrf.py  test_harness_profiles.py  test_json.py  test_judge.py  test_judge_coverage.py  test_keyword_contradiction.py  test_mcp_coverage.py  test_mcp_server.py  test_offline.py  test_p1_robustness.py  test_report.py  test_report_keyword_caveat.py  test_score.py  test_score_l1_landing.py  test_sources.py  test_sources_arxiv.py  test_sources_coverage.py  test_webchat_assets.py
tools/: build_webchat_skill.py  feature_gate.py  feature_list.schema.json
(+6 files in other folders)
